--- a/AC.Back/AC.Servicos/AC.Servicos.csproj
+++ b/AC.Back/AC.Servicos/AC.Servicos.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Negocio\" />
+    <Folder Include="Data\" />
     <Folder Include="Servicos\Servico\" />
     <Folder Include="Servicos\Repositorio\" />
   </ItemGroup>
